DTO適応のためのリファクタリング・Vueの追加

--- a/front_saunalog/public/index.html
+++ b/front_saunalog/public/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="ja">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>サウナログ</title>
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <noscript>
+    <!-- <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+    </noscript> -->
+    <div id="app">
+      <!-- サウナログ テーブル -->
+      <h2>サウナリスト</h2>
+      <form action="">
+        <input type="text">
+        <button>追加</button>
+      </form>
+      <!-- 新規登録フォーム　-->
+    </div>
+    <script src="https://unpkg.com/vue@3.1.5"></script>
+    <script src="src/main.js"></script>
   </body>
 </html>
