--- a/front_saunalog/public/index.html
+++ b/front_saunalog/public/index.html
@@ -4,26 +4,102 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="main.css">
     <title>サウナログ</title>
   </head>
   <body>
-    <div id="app">
-      <h2>サウナ記録</h2>
-      <form v-on:submit.prevent>
-        <input type="text" v-model="newItem">
-        <button v-on:click="addList">追加</button>
+    <div id="#app">
+      <h1>サウナログの登録</h1>
+      <form v-on:submit.prevent action="" method="post">
+        <div>
+          <label for="name">施設名</label>
+          <input type="text" v-model="newItem" id="name" name="name">
+        </div>
+        <div>
+          <label for="area">都道府県</label>
+          <select name="area" id="area">
+              <option value="1" selected>選択してください</option>
+              <option value="北海道">北海道</option>
+              <option value="青森県">青森県</option>
+              <option value="岩手県">岩手県</option>
+              <option value="宮城県">宮城県</option>
+              <option value="秋田県">秋田県</option>
+              <option value="山形県">山形県</option>
+              <option value="福島県">福島県</option>
+              <option value="茨城県">茨城県</option>
+              <option value="栃木県">栃木県</option>
+              <option value="群馬県">群馬県</option>
+              <option value="埼玉県">埼玉県</option>
+              <option value="千葉県">千葉県</option>
+              <option value="東京都">東京都</option>
+              <option value="神奈川県">神奈川県</option>
+              <option value="新潟県">新潟県</option>
+              <option value="富山県">富山県</option>
+              <option value="石川県">石川県</option>
+              <option value="福井県">福井県</option>
+              <option value="山梨県">山梨県</option>
+              <option value="長野県">長野県</option>
+              <option value="岐阜県">岐阜県</option>
+              <option value="静岡県">静岡県</option>
+              <option value="愛知県">愛知県</option>
+              <option value="三重県">三重県</option>
+              <option value="滋賀県">滋賀県</option>
+              <option value="京都府">京都府</option>
+              <option value="大阪府">大阪府</option>
+              <option value="兵庫県">兵庫県</option>
+              <option value="奈良県">奈良県</option>
+              <option value="和歌山県">和歌山県</option>
+              <option value="鳥取県">鳥取県</option>
+              <option value="島根県">島根県</option>
+              <option value="岡山県">岡山県</option>
+              <option value="広島県">広島県</option>
+              <option value="山口県">山口県</option>
+              <option value="徳島県">徳島県</option>
+              <option value="香川県">香川県</option>
+              <option value="愛媛県">愛媛県</option>
+              <option value="高知県">高知県</option>
+              <option value="福岡県">福岡県</option>
+              <option value="佐賀県">佐賀県</option>
+              <option value="長崎県">長崎県</option>
+              <option value="熊本県">熊本県</option>
+              <option value="大分県">大分県</option>
+              <option value="宮崎県">宮崎県</option>
+              <option value="鹿児島県">鹿児島県</option>
+              <option value="沖縄県">沖縄県</option>
+          </select>
+        </div>
+        <div>
+          <label for="rank">評価（5段階）</label>
+          <select name="rank" id="rank">
+            <option value=""></option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+          </select>
+        </div>
+        <div>
+          <label for="comment">コメント</label>
+          <textarea id="comment" name="comment"></textarea>
+        </div>
+        <button v-on:click="addList">登録する</button>
       </form>
       <ul>
-        <li v-for="saunalog in saunalogs">
-          <span>{{ saunalog.item }}</span>
-        </li>
+        <!-- 削除ボタン実装＆リスト表示させたいが上手くいかないので一旦コメントアウト -->
+        <!-- <li v-for="(saunalog, index) in saunalogs">
+          <input type="checkbox" v-model="saunalog.isDone">
+          <span v-bind:class="{ done: saunalog.isDone }">
+            {{ saunalog.item }}
+          </span>
+          <button v-on:click="deleteList(index)">
+            削除
+          </button>
+        </li> -->
       </ul>
-      <pre>{{ $data }}</pre>
+      <!-- <pre>{{ $data }}</pre> -->
     </div>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="src/main.js"></script>
   </body>
 </html>
 
